<resources>
    <string name="app_name">Let\'s Talk Russian - Free PhraseBook</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_categories">Let\'s Talk Russian</string>
    <string name="title_activity_phrases">Phrases</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_favorite_msg">You have no favorite phrases yet!</string>
    <string name="no_result_msg">No result for</string>
    <string name="auto_play_title">Auto play</string>
    <string name="auto_play_summary">Automatically read the phrase when clicked</string>
    <string name="clear_favorites_list">Clear favorites list</string>
    <string name="no_favorites">You have no favorite phrases</string>
    <string name="favorite_cleared">Favorite cleared</string>
    <string name="favorite_count">You have %1$s favorite phrase(s)</string>
    <string name="about">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="rating">Rate this app</string>
    <string name="recommend">Recommend</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="Turn_up_the_volume_please">Turn up the volume please</string>
    <string name="category_1">Common expressions</string>
    <string name="category_2">Greetings</string>
    <string name="category_3">Travel, directions</string>
    <string name="category_4">Numbers and money</string>
    <string name="category_5">Location</string>
    <string name="category_6">Phone/internet/mail</string>
    <string name="category_7">Time and dates</string>
    <string name="category_8">Accommodations</string>
    <string name="category_9">Dining</string>
    <string name="category_10">Making friends</string>
    <string name="category_11">Entertainment</string>
    <string name="category_12">Shopping</string>
    <string name="category_13">Communication difficulties</string>
    <string name="category_14">Emergency and health</string>
    <string name="category_16">General questions</string>
    <string name="category_17">Work</string>
    <string name="category_18">Weather</string>
    <string name="phrase_1">Be careful.</string>
    <string name="phrase_2">Be careful driving.</string>
    <string name="phrase_3">Can you translate this for me?</string>
    <string name="phrase_4">Chicago is very different from Boston.</string>
    <string name="phrase_5">Don\&apos;t worry.</string>
    <string name="phrase_6">Everyone knows it.</string>
    <string name="phrase_7">Everything is ready.</string>
    <string name="phrase_8">Excellent.</string>
    <string name="phrase_9">From time to time.</string>
    <string name="phrase_10">Good idea.</string>
    <string name="phrase_11">He likes it very much.</string>
    <string name="phrase_12">Help!</string>
    <string name="phrase_13">He\&apos;s coming soon.</string>
    <string name="phrase_14">He\&apos;s right.</string>
    <string name="phrase_15">He\&apos;s very annoying.</string>
    <string name="phrase_16">He\&apos;s very famous.</string>
    <string name="phrase_17">How are you?</string>
    <string name="phrase_18">How\&apos;s work going?</string>
    <string name="phrase_19">Hurry!</string>
    <string name="phrase_20">I ate already.</string>
    <string name="phrase_21">I can\&apos;t hear you.</string>
    <string name="phrase_22">I\&apos;d like to go for a walk.</string>
    <string name="phrase_23">I don\&apos;t know how to use it.</string>
    <string name="phrase_24">I don\&apos;t like him.</string>
    <string name="phrase_25">I don\&apos;t like it.</string>
    <string name="phrase_26">I don\&apos;t speak very well.</string>
    <string name="phrase_27">I don\&apos;t understand.</string>
    <string name="phrase_28">I don\&apos;t want it.</string>
    <string name="phrase_29">I don\&apos;t want that.</string>
    <string name="phrase_30">I don\&apos;t want to bother you.</string>
    <string name="phrase_31">I feel good.</string>
    <string name="phrase_32">If you need my help, please let me know.</string>
    <string name="phrase_33">I get off of work at 6.</string>
    <string name="phrase_34">I have a headache.</string>
    <string name="phrase_35">I hope you and your wife have a nice trip.</string>
    <string name="phrase_36">I know.</string>
    <string name="phrase_37">I like her.</string>
    <string name="phrase_38">I\&apos;ll call you when I leave.</string>
    <string name="phrase_39">I\&apos;ll come back later.</string>
    <string name="phrase_40">I\&apos;ll pay.</string>
    <string name="phrase_41">I\&apos;ll take it.</string>
    <string name="phrase_42">I\&apos;ll take you to the bus stop.</string>
    <string name="phrase_43">I lost my watch.</string>
    <string name="phrase_44">I love you.</string>
    <string name="phrase_45">I\&apos;m an American.</string>
    <string name="phrase_46">I\&apos;m cleaning my room.</string>
    <string name="phrase_47">I\&apos;m cold.</string>
    <string name="phrase_48">I\&apos;m coming to pick you up.</string>
    <string name="phrase_49">I\&apos;m going to leave.</string>
    <string name="phrase_50">I\&apos;m good, and you?</string>
    <string name="phrase_51">I\&apos;m happy.</string>
    <string name="phrase_52">I\&apos;m hungry.</string>
    <string name="phrase_53">I\&apos;m married.</string>
    <string name="phrase_54">I\&apos;m not busy.</string>
    <string name="phrase_55">I\&apos;m not married.</string>
    <string name="phrase_56">I\&apos;m not ready yet.</string>
    <string name="phrase_57">I\&apos;m not sure.</string>
    <string name="phrase_58">I\&apos;m sorry, we\&apos;re sold out.</string>
    <string name="phrase_59">I\&apos;m thirsty.</string>
    <string name="phrase_60">I\&apos;m very busy. I don\&apos;t have time now.</string>
    <string name="phrase_61">I need to change clothes.</string>
    <string name="phrase_62">I need to go home.</string>
    <string name="phrase_63">I only want a snack.</string>
    <string name="phrase_64">Is Mr. Smith an American?</string>
    <string name="phrase_65">Is that enough?</string>
    <string name="phrase_66">I think it\&apos;s very good.</string>
    <string name="phrase_67">I think it tastes good.</string>
    <string name="phrase_68">I thought the clothes were cheaper.</string>
    <string name="phrase_69">It\&apos;s longer than 2 miles.</string>
    <string name="phrase_70">I\&apos;ve been here for two days.</string>
    <string name="phrase_71">I\&apos;ve heard Texas is a beautiful place.</string>
    <string name="phrase_72">I\&apos;ve never seen that before.</string>
    <string name="phrase_73">I was about to leave the restaurant when my friends arrived.</string>
    <string name="phrase_74">Just a little.</string>
    <string name="phrase_75">Just a moment.</string>
    <string name="phrase_76">Let me check.</string>
    <string name="phrase_77">Let me think about it.</string>
    <string name="phrase_78">Let\&apos;s go have a look.</string>
    <string name="phrase_79">Let\&apos;s practice English.</string>
    <string name="phrase_80">May I speak to Mrs. Smith please?</string>
    <string name="phrase_81">More than that.</string>
    <string name="phrase_82">Never mind.</string>
    <string name="phrase_83">Next time.</string>
    <string name="phrase_84">No.</string>
    <string name="phrase_85">Nonsense.</string>
    <string name="phrase_86">No, thank you.</string>
    <string name="phrase_87">Nothing else.</string>
    <string name="phrase_88">Not recently.</string>
    <string name="phrase_89">Not yet.</string>
    <string name="phrase_90">Of course.</string>
    <string name="phrase_91">Okay.</string>
    <string name="phrase_92">Please fill out this form.</string>
    <string name="phrase_93">Please take me to this address.</string>
    <string name="phrase_94">Please write it down.</string>
    <string name="phrase_95">Really?</string>
    <string name="phrase_96">Right here.</string>
    <string name="phrase_97">Right there.</string>
    <string name="phrase_98">See you later.</string>
    <string name="phrase_99">See you tomorrow.</string>
    <string name="phrase_100">See you tonight.</string>
    <string name="phrase_101">She\&apos;s pretty.</string>
    <string name="phrase_102">Sorry to bother you.</string>
    <string name="phrase_103">Stop!</string>
    <string name="phrase_104">Take a chance.</string>
    <string name="phrase_105">Take it outside.</string>
    <string name="phrase_106">Tell me.</string>
    <string name="phrase_107">Thanks for everything.</string>
    <string name="phrase_108">Thanks for your help.</string>
    <string name="phrase_109">Thank you.</string>
    <string name="phrase_110">Thank you miss.</string>
    <string name="phrase_111">Thank you sir.</string>
    <string name="phrase_112">Thank you very much.</string>
    <string name="phrase_113">That looks great.</string>
    <string name="phrase_114">That\&apos;s alright.</string>
    <string name="phrase_115">That\&apos;s enough.</string>
    <string name="phrase_116">That\&apos;s fine.</string>
    <string name="phrase_117">That\&apos;s it.</string>
    <string name="phrase_118">That smells bad.</string>
    <string name="phrase_119">That\&apos;s not fair.</string>
    <string name="phrase_120">That\&apos;s not right.</string>
    <string name="phrase_121">That\&apos;s right.</string>
    <string name="phrase_122">That\&apos;s too bad.</string>
    <string name="phrase_123">That\&apos;s too many.</string>
    <string name="phrase_124">That\&apos;s too much.</string>
    <string name="phrase_125">The book is under the table.</string>
    <string name="phrase_126">They\&apos;ll be right back.</string>
    <string name="phrase_127">They\&apos;re the same.</string>
    <string name="phrase_128">They\&apos;re very busy.</string>
    <string name="phrase_129">This doesn\&apos;t work.</string>
    <string name="phrase_130">This is very difficult.</string>
    <string name="phrase_131">This is very important.</string>
    <string name="phrase_132">Try it.</string>
    <string name="phrase_133">Very good, thanks.</string>
    <string name="phrase_134">We like it very much.</string>
    <string name="phrase_135">Would you take a message please?</string>
    <string name="phrase_136">Yes, really.</string>
    <string name="phrase_137">You\&apos;re beautiful.</string>
    <string name="phrase_138">You\&apos;re very nice.</string>
    <string name="phrase_139">You\&apos;re very smart.</string>
    <string name="phrase_140">Your things are all here.</string>
    <string name="phrase_141">Good morning.</string>
    <string name="phrase_142">Good evening sir.</string>
    <string name="phrase_143">Good afternoon.</string>
    <string name="phrase_144">Hello.</string>
    <string name="phrase_145">Certainly!</string>
    <string name="phrase_146">Please call me.</string>
    <string name="phrase_147">Great.</string>
    <string name="phrase_148">Nice to meet you</string>
    <string name="phrase_149">Happy Birthday.</string>
    <string name="phrase_150">Good Luck.</string>
    <string name="phrase_151">Have a good trip.</string>
    <string name="phrase_152">A round trip ticket.</string>
    <string name="phrase_153">A one way ticket.</string>
    <string name="phrase_154">At what time?</string>
    <string name="phrase_155">Go straight ahead.</string>
    <string name="phrase_156">How was the movie?</string>
    <string name="phrase_157">How do I get to the American Embassy?</string>
    <string name="phrase_158">How do I get to Daniel Street?</string>
    <string name="phrase_159">How do I get there?</string>
    <string name="phrase_160">Can I make an appointment for next Wednesday?</string>
    <string name="phrase_161">How long is the flight?</string>
    <string name="phrase_162">About 300 kilometers.</string>
</resources>