<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.applications.coffee.letstalkrussian_free.SettingsActivity"
    android:title="@string/title_activity_settings"
    >
    <CheckBoxPreference
        android:key="pref_auto_play"
        android:title="@string/auto_play_title"
        android:summary="@string/auto_play_summary"
        android:defaultValue="true" />
    <!--<SeekBarPreference
        android:key="pref_voice_speed"
        android:title="Voice Speed"
        android:max="2"
        android:defaultValue="1"
        />-->
    <Preference
        android:key="pref_delete_favorites"
        android:title="@string/clear_favorites_list"
        android:summary="@string/favorite_count"
        />
    <Preference
        android:title="@string/about"
        android:summary="@string/version"

        />
    <Preference
        android:key="pref_rate"
        android:title="@string/rating"
        />

    <Preference
        android:key="pref_recommend"
        android:title="@string/recommend"
        />

</PreferenceScreen>